<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="your_name">Your name</string>
    <string name="your_last_name">Your Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="registration">Registration</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="logout">Logout</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="type_your_message">Type your message</string>
</resources>